name:                orgstat
version:             0.1.4
synopsis:            Statistics visualizer for org-mode
license:             GPL-3
license-file:        LICENSE
extra-source-files:  CHANGES.md
homepage:            https://github.com/volhovM/orgstat
author:              Mikhail Volkhov <volhovm.cs@gmail.com>, Zhenya Vinogradov <zhenyavinogradov@gmail.com>
maintainer:          volhovm.cs@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     OrgStat.Ast
                     , OrgStat.Config
                     , OrgStat.CLI
                     , OrgStat.Helpers
                     , OrgStat.IO
                     , OrgStat.Logic
                     , OrgStat.Parser
                     , OrgStat.Scope
                     , OrgStat.Outputs
                     , OrgStat.Outputs.Block
                     , OrgStat.Outputs.Class
                     , OrgStat.Outputs.Summary
                     , OrgStat.Outputs.Timeline
                     , OrgStat.Outputs.Types
                     , OrgStat.Util
                     , OrgStat.WorkMonad
                     , Paths_orgstat
  build-depends:       aeson >= 0.11.2.0
                     , attoparsec
                     , base >=4.9 && <4.11
                     , boxes >= 0.1.4
                     , bytestring
                     , colour >= 2.3.3
                     , containers >= 0.5.7.1
                     , data-default >= 0.7.1.1
                     , diagrams-lib
                     , diagrams-svg
                     , directory
                     , exceptions >= 0.8.3
                     , filepath
                     , formatting
                     , hashable >= 1.2.4.0
                     , lens >= 4.14
                     , linear
                     , log-warper >= 1.7.1
                     , mtl >= 2.2.1
                     , optparse-simple
                     , orgmode-parse >= 0.2.1
                     , text >= 1.2.2.1
                     , time >= 1.6.0.1
                     , turtle >= 1.2.8
                     , universum >= 0.8.0
                     , yaml >= 0.8.21.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       NoImplicitPrelude
                       OverloadedStrings
                       ScopedTypeVariables
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf

executable orgstat
  main-is:             Main.hs
  other-modules:       Paths_orgstat
  build-depends:       base >=4.9 && <4.11
                     , bytestring
                     , directory
                     , exceptions
                     , filepath
                     , formatting
                     , log-warper
                     , optparse-simple
                     , orgstat
                     , universum
  hs-source-dirs:      src/cli
  default-language:    Haskell2010
  ghc-options:         -threaded  -Wall -O2
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications


test-suite orgstat-test
  main-is:             Test.hs
  other-modules:       Spec
                     , GlobalSpec
  build-depends:       HUnit >= 1.3.1.2
                     , QuickCheck
                     , base >=4.9 && <4.11
                     , colour >= 2.3.3
                     , hspec
                     , orgstat
                     , lens
                     , quickcheck-text >= 0.1.2.1
                     , time >= 1.6.0.1
                     , text
                     , transformers
                     , universum >= 0.5.1.1
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       GeneralizedNewtypeDeriving
